src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  scrollbar-width: none;
}

.gradient-clip {
  -webkit-mask-image: linear-gradient(
    to left,
    rgba(0, 0, 0, 1) 0px,
    rgba(0, 0, 0, 1) 300px,
    rgba(0, 0, 0, 0) 550px
  );
}

.bg-dot-grid {
  background-image: radial-gradient(rgb(231, 231, 231) 1px, transparent 0);
  background-size: 12px 12px;
}

@media (prefers-color-scheme: dark) {
  .bg-dot-grid {
    background-image: radial-gradient(rgb(65, 65, 65) 1px, transparent 0);
  }
}

